# bop

./: Cargo.toml  LICENSE
.github/: README.md
.github/workflows/: CI.yaml  release.yaml
src/: dexscreener.rs  main.rs  repl.rs  utils.rs
src/chain/: chain_properties.rs  chain_type.rs  evm_chain.rs  mod.rs  sol_chain.rs  token.rs  ton_chain.rs
src/dexscreener/: pairs.rs
src/repl/: data_file.rs  default.rs  mod.rs
src/utils/: float.rs  mod.rs  retry.rs  spinner.rs  support_option.rs  table.rs  text.rs
